--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #1d5888;
-    --secondary-color: #ff993b;
+    --primary-color: #202d10;
+    --secondary-color: #94dd26;
     --dark-color: #292929;
     --white-color: #e7e7e7;
 }
