finished project, adjusted color scheme

--- a/css/site.css
+++ b/css/site.css
@@ -5,6 +5,11 @@
     --white-color: #e7e7e7;
 }
 
+.logoFont {
+    font-family: 'Black Ops One', cursive;
+    color: var(--primary-color);
+}
+
 body {
     color: var(--dark-color);
 }
